corrected the extra spaces in my codes

--- a/style.css
+++ b/style.css
@@ -242,8 +242,7 @@ button {
 
 .btn3 {
   background: #ff6b00;
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 24px;
   padding-top: 5px;
   padding-bottom: 5px;
   color: #fff;
@@ -253,6 +252,7 @@ button {
   font-size: 17px;
   line-height: 24px;
   width: 100%;
+  display: flex;
 }
 
 .but {
